src/content_scripts/content.css
div.surfingkeys_hints_host {
    display: block;
    opacity: 1;
    color-scheme: auto;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
    pointer-events: none;
}
div.surfingkeys_match_mark {
    background-color: #ff0;
    color: #000;
    opacity: 0.7;
}
div.surfingkeys_selection_mark {
    background-color: #b4d7fe;
    color: #000;
    opacity: 0.7;
}
div.surfingkeys_cursor {
    background-color: #0642CE;
    color: #f0f8ff;
}
div.surfingkeys_cursor:empty {
    padding: 0px 2px;
    min-height: 12px;
}
.sk_cursor_prompt {
    z-index: 2147483000;
    position: absolute;
    display: block;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
    background: white;
}
.sk_cursor_prompt>div>span {
    padding-right: 8px;
    font-size: 18pt;
    vertical-align: middle;
}
.sk_cursor_prompt>div {
    border-bottom: 1px solid #eee;
    padding: 4px 8px;
}
.sk_cursor_prompt>div.selected {
    background: #3174e2;
    color: white;
}
#sk_clipboard {
    position: fixed;
    z-index: -999;
    top: 0;
    left: 0;
    opacity: 0;
}
#sk_frame {
    position: fixed;
    border: 4px solid #434343;
    box-sizing: border-box;
    z-index: 2147483000;
    background: rgba(202, 202, 202, 0.62);
    color: blue;
    font-size: 16pt;
    font-weight: bold;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

